[package]
name = "my_status"
version = "1.0.0"
authors = ["Robbe Van Herck <robbe@robbevanherck.be>"]
edition = '2021'

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
battery = "0.7.8"
chrono = "0.4.19"
async-trait = "0.1.52"
futures = "0.3.21"
tokio =  { version = "1", features = ["full"] }
btleplug = "0.9.1"
uuid = "0.8.2"
socket2 = "0.4.4"
dbus = "0.9.5"
